WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75759
Web Inspector: Missing Implementation of Public InspectorDOMAgent Function
https://bugs.webkit.org/show_bug.cgi?id=75759
Summary
Web Inspector: Missing Implementation of Public InspectorDOMAgent Function
Joseph Pecoraro
Reported
2012-01-06 16:39:47 PST
• InspectorDOMAgent::searchingForNodeInPage is missing an implementation. • We should also make setSearchingForNodeInPage public.
Attachments
[PATCH] Proposed Fix
(2.31 KB, patch)
2012-01-06 16:41 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
[PATCH] Removed Unused Method
(2.18 KB, patch)
2012-01-09 10:55 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2012-01-06 16:41:38 PST
Created
attachment 121521
[details]
[PATCH] Proposed Fix
WebKit Review Bot
Comment 2
2012-01-06 19:10:58 PST
Comment on
attachment 121521
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 121521 Committed
r104371
: <
http://trac.webkit.org/changeset/104371
>
WebKit Review Bot
Comment 3
2012-01-06 19:11:03 PST
All reviewed patches have been landed. Closing bug.
Pavel Feldman
Comment 4
2012-01-06 22:40:09 PST
(In reply to
comment #0
)
> • InspectorDOMAgent::searchingForNodeInPage is missing an implementation. > • We should also make setSearchingForNodeInPage public.
This change is wrong. I was putting a lot of effort into breaking the: WebKit -> InspectorController -> agents control flows. As of now, only front-end should talk to the agents for control. Acting that way we don't need to sync front-end 'inspect mode' state with backend's 'searching for node'. The getter in the header should have been removed along with its implementation (my oversight), while setter should remain private.
Joseph Pecoraro
Comment 5
2012-01-09 10:55:23 PST
Created
attachment 121689
[details]
[PATCH] Removed Unused Method Reopening based on Pavel's comments. Lets remove the method.
Eric Seidel (no email)
Comment 6
2012-01-09 13:34:43 PST
Comment on
attachment 121689
[details]
[PATCH] Removed Unused Method Cleared review? from
attachment 121689
[details]
so that this bug does not appear in
http://webkit.org/pending-review
. If you would like this patch reviewed, please attach it to a new bug (or re-open this bug before marking it for review again).
Joseph Pecoraro
Comment 7
2012-01-09 14:02:06 PST
Apparently the bug wasn't reopened? Resetting flags.
Pavel Feldman
Comment 8
2012-01-10 03:22:48 PST
Comment on
attachment 121689
[details]
[PATCH] Removed Unused Method Thanks for fixing this.
WebKit Review Bot
Comment 9
2012-01-10 10:44:55 PST
Comment on
attachment 121689
[details]
[PATCH] Removed Unused Method Clearing flags on attachment: 121689 Committed
r104596
: <
http://trac.webkit.org/changeset/104596
>
WebKit Review Bot
Comment 10
2012-01-10 10:45:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug