Web Inspector: Missing Implementation of Public InspectorDOMAgent Function https://bugs.webkit.org/show_bug.cgi?id=75759

Implement missing accessor and make setter public.

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2012-01-06
Reviewed by Timothy Hatcher.

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::searchingForNodeInPage):
* inspector/InspectorDOMAgent.h:

Canonical link: https://commits.webkit.org/92573@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104371 268f45cc-cd09-0410-ab3c-d52691b4dbfc