Source/WebCore/inspector/InspectorDOMAgent.cpp
@@ -943,6 +943,11 @@ void InspectorDOMAgent::mouseDidMoveOverElement(const HitTestResult& result, uns
     }
 }
 
+bool InspectorDOMAgent::searchingForNodeInPage() const
+{
+    return m_searchingForNode;
+}
+
 void InspectorDOMAgent::setSearchingForNode(bool enabled, InspectorObject* highlightConfig)
 {
     if (m_searchingForNode == enabled)
